@@ -24,6 +24,7 @@
 #define HOVER_REMOVE_POPUP_EVENT (SDL_USEREVENT + 2)
 #define DRAW_EVENT (SDL_USEREVENT + 3)
 #define CLOSE_WINDOW_EVENT (SDL_USEREVENT + 4)
+#define TIMER_EVENT (SDL_USEREVENT + 5)
 
 namespace events
 {
